--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.10-SNAPSHOT</version>
+        <version>0.8.0</version>
         <configuration>
           <rules>
             <rule implementation="org.jacoco.maven.RuleConfiguration">
